# gps_activity

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements-dev-win-base.txt  requirements-dev-win-geo.txt  requirements-dev.txt  setup.cfg
.github/: release-drafter.yml
.github/workflows/: ci-tests.yaml  publish.yaml
docs/diagrams/: DesignDiagram.drawio
docs/extraction/: README.md
docs/gps_activity/: README.md
docs/gps_activity/extraction/: README.md
docs/gps_activity/spatial_linker/: README.md
docs/linker/: README.md
docs/performance_dataset_collection/: README.md
docs/performance_dataset_collection/limitations/: README.md
docs/performance_dataset_collection/semi_automatic/: README.md
docs/source/: conf.py  index.rst
gps_activity/: models.py
gps_activity/extraction/factory/: preprocessing.py
gps_activity/linker/: facade.py
gps_activity/linker/nodes/: coverage_statistics.py
gps_activity/metrics/nodes/: fbeta.py  precision.py  recall.py
gps_activity/nodes/: __init__.py
tests/: conftest.py  test_models.py
tests/extraction/: test_facade.py  test_preprocessing_pipeline.py
tests/linker/: test_facade.py  test_models.py  test_preprocessing_pipeline.py
tests/metrics/: test_facade.py
tests/nodes/: test_coordinates_velocity_calculator.py  test_date_extractor.py  test_df_to_gdf.py  test_order_gps.py  test_primary_key_generator.py  test_project_default_fields.py  test_projection.py  test_schema_validator.py  test_timing.py  test_unique_gps_constraint.py  test_unique_vehicle_constrains.py
(+20 files in other folders)
