[tool.poetry]
name = "gps_activity"
version = "0.1.0"
description = "A light-weight mobile module for analysis of GPS activity"
authors = ["Adil Rashitov"]
license = "MIT License"

[tool.poetry.dependencies]
python = ">=3.8, <3.12"
pandas = "^1.4.3"
geopandas = "^0.11.1"
scikit-learn = "^1.1.1"
pandera = "^0.11.0"
numpy = "^1.23.1"
Rtree = "^1.0.0"
scipy = "^1.9.0"
pygeos = "^0.12.0"
pre-commit = "^2.20.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
pytest-parallel = "^0.1.1"
cognitive-complexity = "^1.2.0"
coverage = "^6.4.2"
flake8 = "^5.0.3"
flake8-bugbear = "^22.7.1"
flake8-builtins = "^1.5.3"
flake8-cognitive-complexity = "^0.1.0"
flake8-commas = "^2.1.0"
flake8-functions = "^0.0.7"
flake8-import-order = "^0.18.1"
flake8-polyfill = "^1.0.2"

[build-system]
requires = ["poetry-core>=1.0.0", "wheel"]
build-backend = "poetry.core.masonry.api"
